# gtfs-viewer

./: Cargo.toml  README.md
scripts/: cleanup.sql  gtfs-db.sh  import.sql  schema.sql
src/: handler.rs  main.rs  ui.rs
src/db/: items.rs  mod.rs  queries.rs  types.rs  util.rs
src/ui/: board.rs  menu.rs  mod.rs  trip.rs
