[package]
name = "gtfs-viewer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# UI
crossterm = "0.19"
tui = { version = "0.15", default-features = false, features = ['crossterm'] }

# Backend
rusqlite = "0.25.3"
chrono = "0.4.19"
bitflags = "1.2.1"
regex = "1.5.4"
